# dogzilla_sim

./: README.md
src/: yahboom_description.rar
src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/install/bringup/share/bringup/: Navigation_bringup.launch.py  package.sh
src/install/champ/share/champ/: package.sh
src/install/champ_bringup/share/champ_bringup/: local_setup.sh  package.sh
src/install/champ_msgs/share/champ_msgs/: local_setup.sh  package.dsv  package.ps1  package.sh
src/install/image_color_lab/share/image_color_lab/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
src/unitree-go2-ros2/robots/configs/dogzilla_config/: CMakeLists.txt  package.xml
src/unitree-go2-ros2/robots/configs/dogzilla_config/config/autonomy/: navigation.yaml  slam.yaml
src/unitree-go2-ros2/robots/configs/dogzilla_config/config/gait/: gait.yaml
src/unitree-go2-ros2/robots/configs/dogzilla_config/config/ros_control/: ros_control.yaml
src/unitree-go2-ros2/robots/configs/dogzilla_config/launch/: bringup.launch.py  gazebo.launch.py  navigate.launch.py  slam.launch.py
src/unitree-go2-ros2/robots/configs/dogzilla_config/maps/: playground.pgm
src/unitree-go2-ros2/robots/configs/dogzilla_config/worlds/: default.sdf
src/unitree-go2-ros2/robots/descriptions/dogzilla_description/: CMakeLists.txt  README.md  package.xml
src/unitree-go2-ros2/robots/descriptions/dogzilla_description/launch/: description.launch.py
src/unitree-go2-ros2/robots/descriptions/dogzilla_description/xacro/: dogzilla.xacro
src/voice_xgo_ctrl_run/: setup.py
src/voice_xgo_ctrl_run/voice_xgo_ctrl_run/: ros2_dog_agent.py
src/yahboom_bringup/launch/: Catographer_localization.launch.py
src/yahboom_publish/: package.xml
(+107 files in other folders)
