<?xml version="1.0"?>
<package format="3">
  <name>dogzilla_config</name>
  <version>0.1.0</version>
  <description>Dogzilla Config Package</description>

  <maintainer email="user@example.com">User</maintainer>
  <author>User</author>

  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>launch_ros</build_depend>

  <exec_depend>launch_ros</exec_depend>
  <exec_depend>dogzilla_description</exec_depend>
  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>
  <exec_depend>champ_bringup</exec_depend>
  <exec_depend>champ_gazebo</exec_depend>
  <exec_depend>champ_navigation</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>